Bug 166205 - Field not seen on DOCX fileopen
Summary: Field not seen on DOCX fileopen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Bayram Çiçek
URL:
Whiteboard: target:25.8.0 target:25.2.4 inRelease...
Keywords: filter:docx
Depends on:
Blocks: DOCX-Fields
  Show dependency treegraph
 
Reported: 2025-04-16 08:22 UTC by Timur
Modified: 2025-05-29 11:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (96.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-04-16 08:22 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-04-16 08:22:21 UTC
Created attachment 200358 [details]
Sample DOCX

Open sample DOCX from MSO, field is not seen.
Field is to the left, image how it should look is to the right right. 
If we add paragraphs bellow the field, field is more and more visible.
Comment 1 m_a_riosv 2025-04-16 11:40:05 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 356f916d0e7dbab7f871c3feb19c6e1292c2a2f5
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 2 Commit Notification 2025-05-16 12:16:09 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43e49a34a5e581194eff38a5e51fda85cfa5a446

tdf#166205: decrease the page height to 5%

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-05-19 13:34:34 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/71d379d4344403ff06908e92feb062b4b95545e3

tdf#166205: decrease the page height to 5%

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Bayram Çiçek 2025-05-21 07:47:37 UTC
added this change to inReleaseNotes:25.2
Comment 5 Commit Notification 2025-05-24 18:36:30 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98164d19c21fe753554190172c35523c8c82f375

tdf#166205: add unittest for first-page-header&footer

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-05-29 11:47:11 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/bd90ea075cdaf166b08af891d487444cc6416bc6

tdf#166205: add unittest for first-page-header&footer

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.