tdf#166205: decrease the page height to 5%

to fit header & footer if DocumentSettingId::TAB_OVER_SPACING compatibility flag is set.

- if a doc created in MSO Word and opened in LO Writer, header&footer for the first page were not visible - for some documents.
- this change make them visible now.

Signed-off-by: Bayram Çiçek <bayram.cicek@collabora.com>
Change-Id: If4548949514eb319a6b1e3af5799d266f53ec753
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185261
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins